--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     body {
         position: relative;
         height: 100%;
-        font-family: poppins;
+  
     }
 
     body {
         background: #eee;
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-family: poppins;
         font-size: 14px;
         color: #000;
         margin: 0;
@@ -93,13 +93,8 @@
     </nav>
 
 
-    <div class="containerx">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper" id="sweep_slide">
-
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
+    <div class="containerx py-1"  id="sweep_slide">
+       
     </div>
 
     <div class="container">
@@ -108,33 +103,18 @@
     </div>
 
 
-    <div class="container my-5">
-        <div class="row gy-5" id="cardsss">
-
-        </div>
+    <div class="container my-5" id="cardsss">
+    
     </div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <!-- Initialize Swiper -->
 <script>
-    var swiper = new Swiper(".mySwiper", {
-        loop: true,
-        keyboard: {
-            enabled: true,
-        },
-        autoplay: {
-            delay: 2000,
-            disableOnInteraction: false,
-        },
-        pagination: {
-            el: ".swiper-pagination",
-            dynamicBullets: true,
-        },
-    });
+
 </script>
 
 </html>
